--- a/Calculations.Tests/Calculations.Tests.csproj
+++ b/Calculations.Tests/Calculations.Tests.csproj
@@ -17,7 +17,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\ConsoleApp1\Calculations.csproj" />
+    <ProjectReference Include="..\Calculations\Calculations.csproj" />
   </ItemGroup>
 
 </Project>
